Identify the English text in each file.

--- a/about.html
+++ b/about.html
@@ -49,8 +49,8 @@
         <div class="row">
           <div class="col-lg-7 mx-auto align-self-center">
             <div class=" text-center">
-              <h1>About Us</h1>
-              <p>"Your wellness journey starts here, explore our range of pharmaceutical treasures!"</p>ˀ
+              <h1>À propos de nous</h1>
+              <p>"Votre parcours de bien-être commence ici, explorez notre gamme de trésors pharmaceutiques !"</p>ˀ
             </div>
           </div>
         </div>
@@ -126,7 +126,7 @@
               <span class="icon-truck text-primary"></span>
             </div>
             <div class="text">
-              <h2>Free Shopping</h2>
+              <h2>Livraison Gratuite</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan
                 tincidunt fringilla.</p>
             </div>
@@ -136,7 +136,7 @@
               <span class="icon-refresh2 text-primary"></span>
             </div>
             <div class="text">
-              <h2>Free Returns</h2>
+              <h2>Retours Gratuits</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan
                 tincidunt fringilla.</p>
             </div>
@@ -146,7 +146,7 @@
               <span class="icon-help text-primary"></span>
             </div>
             <div class="text">
-              <h2>Customer Support</h2>
+              <h2>Assistance Client</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan
                 tincidunt fringilla.</p>
             </div>
@@ -160,7 +160,7 @@
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 site-section-heading text-center pt-4">
-            <h2>The Team</h2>
+            <h2>L'Équipe</h2>
           </div>
         </div>
         <div class="row">
@@ -171,7 +171,7 @@
                 <div class="block-38-header">
                   <img src="images/person_1.jpg" alt="Image placeholder" class="mb-4">
                   <h3 class="block-38-heading h4">Elizabeth Graham</h3>
-                  <p class="block-38-subheading">CEO/Co-Founder</p>
+                  <p class="block-38-subheading">PDG/Co-fondatrice</p>
                 </div>
                 <div class="block-38-body">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio
@@ -186,7 +186,7 @@
                 <div class="block-38-header">
                   <img src="images/person_2.jpg" alt="Image placeholder" class="mb-4">
                   <h3 class="block-38-heading h4">Jennifer Greive</h3>
-                  <p class="block-38-subheading">Co-Founder</p>
+                  <p class="block-38-subheading">Co-fondatrice</p>
                 </div>
                 <div class="block-38-body">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio
@@ -216,7 +216,7 @@
                 <div class="block-38-header">
                   <img src="images/person_4.jpg" alt="Image placeholder" class="mb-4">
                   <h3 class="block-38-heading h4">Mike Coolbert</h3>
-                  <p class="block-38-subheading">Sales Manager</p>
+                  <p class="block-38-subheading">Responsable des ventes</p>
                 </div>
                 <div class="block-38-body">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio
@@ -236,25 +236,25 @@
           <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
 
             <div class="block-7">
-              <h3 class="footer-heading mb-4">About Us</h3>
+              <h3 class="footer-heading mb-4">À propos de nous</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius quae reiciendis distinctio voluptates
                 sed dolorum excepturi iure eaque, aut unde.</p>
             </div>
 
           </div>
           <div class="col-lg-3 mx-auto mb-5 mb-lg-0">
-            <h3 class="footer-heading mb-4">Quick Links</h3>
+            <h3 class="footer-heading mb-4">Liens Rapides</h3>
             <ul class="list-unstyled">
-              <li><a href="#">Supplements</a></li>
-              <li><a href="#">Vitamins</a></li>
-              <li><a href="#">Diet &amp; Nutrition</a></li>
-              <li><a href="#">Tea &amp; Coffee</a></li>
+              <li><a href="#">Suppléments</a></li>
+              <li><a href="#">Vitamines</a></li>
+              <li><a href="#">Régime &amp; Nutrition</a></li>
+              <li><a href="#">Thé &amp; Café</a></li>
             </ul>
           </div>
 
           <div class="col-md-6 col-lg-3">
             <div class="block-5 mb-5">
-              <h3 class="footer-heading mb-4">Contact Info</h3>
+              <h3 class="footer-heading mb-4">Infos de contact</h3>
               <ul class="list-unstyled">
                 <li class="address"><a href="adrs://">18, rue de zone industrielle route de la gare, Houch Mahiéddine, Reghaia - Alger 16000, Algerie..</a></li>
                 <li class="phone"><a href="tel://2135572195"> </a>023 85 10 109</li>
