--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <link rel="stylesheet" href="css/aos.css">
 
-  <link rel="stylesheet" href="css/style.css">+
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -50,9 +50,9 @@
           <div class="col-lg-7 mx-auto order-lg-2 align-self-center">
             <div class="site-block-cover-content text-center">
               <h2 class="sub-title"> </h2>
-              <h1>Welcome To BIOPHARM</h1>
+              <h1>Bienvenue à BIOPHARM</h1>
               <p>
-                <a href="shop.html" class="btn btn-primary px-5 py-3">Shop Now</a>
+                <a href="shop.html" class="btn btn-primary px-5 py-3">Acheter Maintenant</a>
               </p>
             </div>
           </div>
@@ -66,7 +66,7 @@
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
             <div class="banner-wrap bg-primary h-100">
               <a href="#" class="h-100">
-                <h5>Free <br> Shipping</h5>
+                <h5>Livraison Gratuite</h5>
                 <p>
                   Amet sit amet dolor
                   <strong> </strong>
@@ -77,7 +77,7 @@
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
             <div class="banner-wrap h-100">
               <a href="#" class="h-100">
-                <h5>Season <br> Sale 50% Off</h5>
+                <h5>Promotion De Saison -50%</h5>
                 <p>
                   Amet sit amet dolor
                   <strong> </strong>
@@ -88,7 +88,7 @@
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
             <div class="banner-wrap bg-warning h-100">
               <a href="#" class="h-100">
-                <h5>Buy <br> A Gift Card</h5>
+                <h5>Acheter Une Carte Cadeau</h5>
                 <p>
                   Amet sit amet dolor
                   <strong></strong>
@@ -105,7 +105,7 @@
       <div class="container">
         <div class="row">
           <div class="title-section text-center col-12">
-            <h2 class="text-uppercase">Popular Products</h2>
+            <h2 class="text-uppercase">Produits Populaires</h2>
           </div>
         </div>
 
@@ -114,7 +114,7 @@
         </div>
         <div class="row mt-5">
           <div class="col-12 text-center">
-            <a href="shop.html" class="btn btn-primary px-4 py-3">View All Products</a>
+            <a href="shop.html" class="btn btn-primary px-4 py-3">Voir Tous Les Produits</a>
           </div>
         </div>
       </div>
@@ -125,7 +125,7 @@
       <div class="container">
         <div class="row">
           <div class="title-section text-center col-12">
-            <h2 class="text-uppercase">New Products</h2>
+            <h2 class="text-uppercase">Nouveaux Produits</h2>
           </div>
         </div>
         <div class="row">
@@ -166,7 +166,7 @@
       <div class="container">
         <div class="row">
           <div class="title-section text-center col-12">
-            <h2 class="text-uppercase">Testimonials</h2>
+            <h2 class="text-uppercase">Témoignages</h2>
           </div>
         </div>
         <div class="row">
@@ -227,7 +227,7 @@
           <div class="col-lg-6 mb-5 mb-lg-0">
             <a href="#" class="banner-1 h-100 d-flex" style="background-image: url('images/bg_1.jpg');">
               <div class="banner-1-inner align-self-center">
-                <h2>Pharma Products</h2>
+                <h2>Produits Pharmaceutiques</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae ex ad minus rem odio voluptatem.
                 </p>
               </div>
@@ -236,7 +236,7 @@
           <div class="col-lg-6 mb-5 mb-lg-0">
             <a href="#" class="banner-1 h-100 d-flex" style="background-image: url('images/bg_2.jpg');">
               <div class="banner-1-inner ml-auto  align-self-center">
-                <h2>Rated by Experts</h2>
+                <h2>Évalués Par Des Experts</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae ex ad minus rem odio voluptatem.
                 </p>
               </div>
@@ -253,25 +253,25 @@
           <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
 
             <div class="block-7">
-              <h3 class="footer-heading mb-4">About Us</h3>
+              <h3 class="footer-heading mb-4">À propos de nous</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius quae reiciendis distinctio voluptates
                 sed dolorum excepturi iure eaque, aut unde.</p>
             </div>
 
           </div>
           <div class="col-lg-3 mx-auto mb-5 mb-lg-0">
-            <h3 class="footer-heading mb-4">Quick Links</h3>
+            <h3 class="footer-heading mb-4">Liens Rapides</h3>
             <ul class="list-unstyled">
-              <li><a href="#">Supplements</a></li>
-              <li><a href="#">Vitamins</a></li>
-              <li><a href="#">Diet &amp; Nutrition</a></li>
-              <li><a href="#">Tea &amp; Coffee</a></li>
+              <li><a href="#">Suppléments</a></li>
+              <li><a href="#">Vitamines</a></li>
+              <li><a href="#">Régime &amp; Nutrition</a></li>
+              <li><a href="#">Thé &amp; Café</a></li>
             </ul>
           </div>
 
           <div class="col-md-6 col-lg-3">
             <div class="block-5 mb-5">
-              <h3 class="footer-heading mb-4">Contact Info</h3>
+              <h3 class="footer-heading mb-4">Infos de Contact</h3>
               <ul class="list-unstyled">
                 <li class="address"><a href="adrs://">18, rue de zone industrielle route de la gare, Houch Mahiéddine, Reghaia - Alger 16000, Algerie..</a></li>
                 <li class="phone"><a href="tel://2135572195"> </a>023 85 10 109</li>
