--- a/cart.html
+++ b/cart.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
-  <title>Pharma &mdash; Colorlib Template</title>
+  <title>Pharma — Modèle Colorlib</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -57,15 +57,15 @@
                 <thead>
                   <tr>
                     <th class="product-thumbnail">Image</th>
-                    <th class="product-name">Product</th>
-                    <th class="product-price">Price</th>
-                    <th class="product-quantity">Quantity</th>
+                    <th class="product-name">Produit</th>
+                    <th class="product-price">Prix</th>
+                    <th class="product-quantity">Quantité</th>
                     <th class="product-total">Total</th>
-                    <th class="product-remove">Remove</th>
+                    <th class="product-remove">Supprimer</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <!-- Dynamic content will be inserted here by JavaScript -->
+                  <!-- Le contenu dynamique sera inséré ici par JavaScript -->
                 </tbody>
               </table>
             </div>
@@ -76,19 +76,19 @@
           <div class="col-md-6">
             <div class="row mb-5">
               <div class="col-md-6 mb-3 mb-md-0">
-                <button class="btn btn-outline-primary btn-md btn-block" onclick="window.location='shop.html'">Continue Shopping</button>
+                <button class="btn btn-outline-primary btn-md btn-block" onclick="window.location='shop.html'">Continuer vos achats</button>
               </div>
             </div>
             <div class="row">
               <div class="col-md-12">
                 <label class="text-black h4" for="coupon">Coupon</label>
-                <p>Enter your coupon code if you have one.</p>
+                <p>Entrez votre code de coupon si vous en avez un.</p>
               </div>
               <div class="col-md-8 mb-3 mb-md-0">
-                <input type="text" class="form-control py-3" id="coupon" placeholder="Coupon Code">
+                <input type="text" class="form-control py-3" id="coupon" placeholder="Code de coupon">
               </div>
               <div class="col-md-4">
-                <button class="btn btn-primary btn-md px-4">Apply Coupon</button>
+                <button class="btn btn-primary btn-md px-4">Appliquer le coupon</button>
               </div>
             </div>
           </div>
@@ -97,7 +97,7 @@
               <div class="col-md-7">
                 <div class="row">
                   <div class="col-md-12 text-right border-bottom mb-5">
-                    <h3 class="text-black h4 text-uppercase">Cart Totals</h3>
+                    <h3 class="text-black h4 text-uppercase">Totaux du panier</h3>
                   </div>
                 </div>
                 <div class="row mb-5">
@@ -111,8 +111,7 @@
     
                 <div class="row">
                   <div class="col-md-12">
-                    <button class="btn btn-primary btn-lg btn-block" onclick="window.location='thankyou.html'">Proceed To
-                      Checkout</button>
+                    <button class="btn btn-primary btn-lg btn-block" onclick="window.location='thankyou.html'">Passer à la caisse</button>
                   </div>
                 </div>
               </div>
@@ -128,7 +127,7 @@
           <div class="col-lg-6 mb-5 mb-lg-0">
             <a href="#" class="banner-1 h-100 d-flex" style="background-image: url('images/bg_1.jpg');">
               <div class="banner-1-inner align-self-center">
-                <h2>Pharma Products</h2>
+                <h2>Produits Pharma</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae ex ad minus rem odio voluptatem.
                 </p>
               </div>
@@ -137,7 +136,7 @@
           <div class="col-lg-6 mb-5 mb-lg-0">
             <a href="#" class="banner-1 h-100 d-flex" style="background-image: url('images/bg_2.jpg');">
               <div class="banner-1-inner ml-auto  align-self-center">
-                <h2>Rated by Experts</h2>
+                <h2>Évalué par des experts</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae ex ad minus rem odio voluptatem.
                 </p>
               </div>
@@ -154,24 +153,24 @@
           <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
 
             <div class="block-7">
-              <h3 class="footer-heading mb-4">About Us</h3>
+              <h3 class="footer-heading mb-4">À propos de nous</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius quae reiciendis distinctio voluptates
                 sed dolorum excepturi iure eaque, aut unde.</p>
             </div>
 
           </div>
           <div class="col-lg-3 mx-auto mb-5 mb-lg-0">
-            <h3 class="footer-heading mb-4">Quick Links</h3>
+            <h3 class="footer-heading mb-4">Liens rapides</h3>
             <ul class="list-unstyled">
-              <li><a href="#">Supplements</a></li>
-              <li><a href="#">Vitamins</a></li>
-              <li><a href="#">Diet &amp; Nutrition</a></li>
-              <li><a href="#">Tea &amp; Coffee</a></li>
+              <li><a href="#">Suppléments</a></li>
+              <li><a href="#">Vitamines</a></li>
+              <li><a href="#">Régime &amp; Nutrition</a></li>
+              <li><a href="#">Thé &amp; Café</a></li>
             </ul>
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="block-5 mb-5">
-              <h3 class="footer-heading mb-4">Contact Info</h3>
+              <h3 class="footer-heading mb-4">Infos de contact</h3>
               <ul class="list-unstyled">
                 <li class="address"><a href="adrs://">Pharmacie Belle Vue,QWQ5+7HM, Aïn Benian</a></li>
                 <li class="phone"><a href="tel://2135572195">+213 5572195</a></li>
@@ -190,7 +189,7 @@
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               Copyright &copy;
               <script>document.write(new Date().getFullYear());</script>
-              with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://www.who.int/fr" target="_blank"
+              avec <i class="icon-heart" aria-hidden="true"></i> par <a href="https://www.who.int/fr" target="_blank"
                 class="text-primary">organisation mondiale de la santé</a>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
