--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
             }
           });
         })
-        .catch(error => console.error('Error loading header:', error));
+        .catch(error => console.error('Erreur lors du chargement de l\'en-tête:', error));
     </script>
 
     <!-- Remove the breadcrumb navigation -->
@@ -60,7 +60,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="h3 mb-5 text-black">Get In Touch</h2>
+            <h2 class="h3 mb-5 text-black">Contactez-nous</h2>
           </div>
           <div class="col-md-12">
     
@@ -73,7 +73,7 @@
     
                 <div class="form-group row">
                   <div class="col-md-12">
-                    <label for="c_subject" class="text-black">Subject </label>
+                    <label for="c_subject" class="text-black">Sujet </label>
                     <input type="text" class="form-control" id="c_subject" name="c_subject">
                   </div>
                 </div>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="form-group row">
                   <div class="col-lg-12">
-                    <input type="submit" class="btn btn-primary btn-lg btn-block" value="Send Message">
+                    <input type="submit" class="btn btn-primary btn-lg btn-block" value="Envoyer le message">
                   </div>
                 </div>
               </div>
@@ -118,7 +118,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2 class="text-white mb-4">Offices</h2>
+            <h2 class="text-white mb-4">Bureaux</h2>
           </div>
           <div class="col-lg-4">
             <div class="p-4 bg-white mb-3 rounded">
@@ -150,25 +150,25 @@
           <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
 
             <div class="block-7">
-              <h3 class="footer-heading mb-4">About Us</h3>
+              <h3 class="footer-heading mb-4">À propos de nous</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius quae reiciendis distinctio voluptates
                 sed dolorum excepturi iure eaque, aut unde.</p>
             </div>
 
           </div>
           <div class="col-lg-3 mx-auto mb-5 mb-lg-0">
-            <h3 class="footer-heading mb-4">Quick Links</h3>
+            <h3 class="footer-heading mb-4">Liens rapides</h3>
             <ul class="list-unstyled">
-              <li><a href="#">Supplements</a></li>
-              <li><a href="#">Vitamins</a></li>
-              <li><a href="#">Diet &amp; Nutrition</a></li>
-              <li><a href="#">Tea &amp; Coffee</a></li>
+              <li><a href="#">Suppléments</a></li>
+              <li><a href="#">Vitamines</a></li>
+              <li><a href="#">Régime &amp; Nutrition</a></li>
+              <li><a href="#">Thé &amp; Café</a></li>
             </ul>
           </div>
 
           <div class="col-md-6 col-lg-3">
             <div class="block-5 mb-5">
-              <h3 class="footer-heading mb-4">Contact Info</h3>
+              <h3 class="footer-heading mb-4">Infos de contact</h3>
               <ul class="list-unstyled">
                 <li class="address"><a href="adrs://">18, rue de zone industrielle route de la gare, Houch Mahiéddine, Reghaia - Alger 16000, Algerie..</a></li>
                 <li class="phone"><a href="tel://2135572195"> </a>023 85 10 109</li>
@@ -185,7 +185,7 @@
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               Copyright &copy;
               <script>document.write(new Date().getFullYear());</script>
-              with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://www.who.int/fr" target="_blank"
+              avec <i class="icon-heart" aria-hidden="true"></i> par <a href="https://www.who.int/fr" target="_blank"
                 class="text-primary">organisation mondiale de la santé</a>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
