Identify the about.

--- a/about.html
+++ b/about.html
@@ -174,8 +174,8 @@
                   <p class="block-38-subheading">PDG/Co-fondatrice</p>
                 </div>
                 <div class="block-38-body">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio
-                    recusandae doloribus ut fugit officia voluptate soluta. </p>
+                  <p>  Explorez notre site pour partager vos idées et
+                    contribuer davantage à la réussite de notre équipe.</p>
                 </div>
               </div>
             </div>
@@ -189,8 +189,8 @@
                   <p class="block-38-subheading">Co-fondatrice</p>
                 </div>
                 <div class="block-38-body">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio
-                    recusandae doloribus ut fugit officia voluptate soluta. </p>
+                  <p>  Nous valorisons l’opinion de nos visiteurs pour
+                    innover et grandir ensemble.</p>
                 </div>
               </div>
             </div>
@@ -204,8 +204,8 @@
                   <p class="block-38-subheading">Marketing</p>
                 </div>
                 <div class="block-38-body">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio
-                    recusandae doloribus ut fugit officia voluptate soluta. </p>
+                  <p> Vos retours sont essentiels pour affiner nos
+                    stratégies marketing.</p>
                 </div>
               </div>
             </div>
@@ -219,8 +219,8 @@
                   <p class="block-38-subheading">Responsable des ventes</p>
                 </div>
                 <div class="block-38-body">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio
-                    recusandae doloribus ut fugit officia voluptate soluta. </p>
+                  <p>Chaque nouvelle idée de notre communauté nourrit
+                    notre croissance.</p>
                 </div>
               </div>
             </div>
@@ -237,8 +237,7 @@
 
             <div class="block-7">
               <h3 class="footer-heading mb-4">À propos de nous</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius quae reiciendis distinctio voluptates
-                sed dolorum excepturi iure eaque, aut unde.</p>
+              <p>Biopharm, fondé en 1991, est un groupe pharmaceutique algérien détenant 13 % du marché et exportant en Afrique. Il fabrique 130 produits et est certifié aux normes européennes.</p>
             </div>
 
           </div>
