--- a/shop-single.html
+++ b/shop-single.html
@@ -175,8 +175,7 @@
 
             <div class="block-7">
               <h3 class="footer-heading mb-4">À propos de nous</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius quae reiciendis distinctio voluptates
-                sed dolorum excepturi iure eaque, aut unde.</p>
+              <p>Biopharm, fondé en 1991, est un groupe pharmaceutique algérien détenant 13 % du marché et exportant en Afrique. Il fabrique 130 produits et est certifié aux normes européennes.</p>
             </div>
 
           </div>
