--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <a href="#" class="h-100">
                 <h5>Livraison Gratuite</h5>
                 <p>
-                  Amet sit amet dolor
+                  "Profitez de la livraison gratuite sur toutes vos commandes !"
                   <strong> </strong>
                 </p>
               </a>
@@ -79,7 +79,7 @@
               <a href="#" class="h-100">
                 <h5>Promotion De Saison -50%</h5>
                 <p>
-                  Amet sit amet dolor
+                  "Obtenez jusqu'à -50% sur une sélection de produits. Offre limitée !"
                   <strong> </strong>
                 </p>
               </a>
@@ -90,7 +90,7 @@
               <a href="#" class="h-100">
                 <h5>Acheter Une Carte Cadeau</h5>
                 <p>
-                  Amet sit amet dolor
+                  "Offrez la liberté de choix avec nos cartes cadeaux !"
                   <strong></strong>
                 </p>
               </a>
