--- a/shop.html
+++ b/shop.html
@@ -240,11 +240,7 @@
         <div class="row align-items-stretch">
           <div class="col-lg-6 mb-5 mb-lg-0">
             <a href="#" class="banner-1 h-100 d-flex" style="background-image: url('images/bg_1.jpg');">
-              <div class="banner-1-inner align-self-center">
-                <h2>Produits Pharma</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae ex ad minus rem odio voluptatem.
-                </p>
-              </div>
+             
             </a>
           </div>
           <div class="col-lg-6 mb-5 mb-lg-0">
@@ -275,19 +271,19 @@
           <div class="col-lg-3 mx-auto mb-5 mb-lg-0">
             <h3 class="footer-heading mb-4">Liens rapides</h3>
             <ul class="list-unstyled">
-              <li><a href="#">Supplements</a></li>
-              <li><a href="#">Vitamins</a></li>
-              <li><a href="#">Diet &amp; Nutrition</a></li>
-              <li><a href="#">Tea &amp; Coffee</a></li>
+              <li class="address">< href="adrs://">18, rue de zone industrielle route de la gare, Houch Mahiéddine, Reghaia - Alger 16000, Algerie..</li>
+              <li class="phone"><a href="tel://2135572195"> 023 85 10 109</li>
+              <li class="email"><a href="eml://pharmavie@gmail.com">contact@biopharm.dz/a></li>
             </ul>
           </div>
+
 
           <div class="col-md-6 col-lg-3">
             <div class="block-5 mb-5">
               <h3 class="footer-heading mb-4">Infos de contact</h3>
               <ul class="list-unstyled">
-                <li class="address"><a href="adrs://">18, rue de zone industrielle route de la gare, Houch Mahiéddine, Reghaia - Alger 16000, Algerie..</a></li>
-                <li class="phone"><a href="tel://2135572195"> </a>023 85 10 109</li>
+                <li class="address"><a href="adrs://">18, rue de zone industrielle route de la gare, Houch Mahiéddine, Reghaia - Alger 16000, Algerie..</li>
+                <li class="phone"><a href="tel://2135572195"> 023 85 10 109</li>
                 <li class="email"><a href="eml://pharmavie@gmail.com">contact@biopharm.dz/a></li>
               </ul>
             </div>
